<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  app:startDestination="@id/dashboardFragment">

  <fragment
    android:id="@+id/dashboardFragment"
    android:name="com.sellsmart.drawer.ui.dashboard.DashboardFragment"
    android:label="@string/nav_dashboard" />
  <fragment
    android:id="@+id/itemsFragment"
    android:name="com.sellsmart.drawer.ui.items.ItemsFragment"
    android:label="@string/nav_items" />
  <fragment
    android:id="@+id/addItemFragment"
    android:name="com.sellsmart.drawer.ui.add.AddItemFragment"
    android:label="@string/nav_add" />
  <fragment
    android:id="@+id/categoriesFragment"
    android:name="com.sellsmart.drawer.ui.categories.CategoriesFragment"
    android:label="@string/nav_categories" />
  <fragment
    android:id="@+id/analyticsFragment"
    android:name="com.sellsmart.drawer.ui.analytics.AnalyticsFragment"
    android:label="@string/nav_analytics" />
</navigation>
